--- a/en/_includes/toloka-llm-toc.yaml
+++ b/en/_includes/toloka-llm-toc.yaml
@@ -3,27 +3,29 @@ items:
     href: ../toloka-llm/index.md
   - name: Registering and signing in
     href: ../toloka-llm/register.md
-  - name: Creating project
+  - name: "{{ llm-name }} workflow overview"
+    href: ../toloka-llm/project.md
+  - name: Working with datasets
     items:
-      - name: "{{ llm-name }} workflow"
-        href: ../toloka-llm/project.md
       - name: Uploading dataset
         href: ../toloka-llm/dataset.md
-      - name: Describing task
-        href: ../toloka-llm/task-description.md
+      - name: Labeling data manually
+        href: ../toloka-llm/label.md
+  - name: Problem definition
+    items:
       - name: Using classes
         href: ../toloka-llm/classes.md
+      - name: Describing task
+        href: ../toloka-llm/task-description.md
+  - name: Iterating on quality
+    items:
       - name: Generating and editing prompt
         href: ../toloka-llm/prompt.md
-      - name: Getting variants
+      - name: Comparing variants
         href: ../toloka-llm/variants.md
-  - name: Labeling data
-    items:
-      - name: Deploying project
-        href: ../toloka-llm/deploy.md
-      - name: Adding OpenAI API key or bank card
-        href: ../toloka-llm/funds.md
-      - name: Getting results
-        href: ../toloka-llm/results.md
+  - name: Creating endpoint
+    href: ../toloka-llm/deploy.md
+  - name: Adding OpenAI API key
+    href: ../toloka-llm/api-key.md
   - name: Terminology
     href: ../toloka-llm/terminology.md
